grey background overlap issue resolved

--- a/src/css/partials/_score.scss
+++ b/src/css/partials/_score.scss
@@ -1,4 +1,5 @@
 header {
+  display: flex;
   left: 0;
   position: absolute;
   top: 0;
@@ -9,6 +10,9 @@ header {
     height: 100px;
     justify-content: space-around;
     text-decoration: none;
+  }
+  .logout-btn {
+    margin-right: 40px;
   }
 
   .header-content-container {
@@ -26,7 +30,8 @@ header {
   }
 
   &.vertical {
-    transform: translateX(128px);
+    padding-left: 310px;
+    transform: translateX(30px);
   }
 }
 
@@ -248,7 +253,7 @@ header {
    border-radius: 50%;
    height: 70px;
    position: fixed;
-   right: 6rem;
+   right: 8rem;
    top: 1rem;
    width: 70px;
   //  z-index: 1;
